--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
     "framer-motion": "^11.13.1",
+    "next": "^15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "tailwindcss": "^3.4.16"
   }
 }
