--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.13.1",
     "next": "^15.0.4",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
@@ -44,7 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/next": "^9.0.0",
+    "@types/nodemailer": "^6.4.17",
     "tailwindcss": "^3.4.16"
   }
 }
